fix: Add Java 8 Compatibility